<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label1"
            android:paddingLeft="25dp"
            android:textStyle="bold"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/value1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint"
            android:inputType="numberSigned" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label2"
            android:paddingLeft="25dp"
            android:textStyle="bold"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/value2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint"
            android:inputType="numberSigned" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label3"
            android:paddingLeft="25dp"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_gravity="bottom"/>
        <Spinner
            android:id="@+id/operation_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="calculate"
        android:text="@string/calculate_button_text" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/output_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="45sp"
            android:text="@string/output_label_text" />

        <TextView
            android:id="@+id/output_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="45sp"
            android:text="" />

    </LinearLayout>


</LinearLayout>